// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FilterContainer /> renders correctly without filter category is chosen 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="filter main"
      >
        <select
          class="filter filter-select-category"
          name="filter-category"
        >
          <option
            disabled=""
            hidden=""
          >
            Filter By Category
          </option>
          <option>
            All
          </option>
          <option
            value="pokemon-habitat/"
          >
            Habitat
          </option>
          <option
            value="pokemon-shape/"
          >
            Shape
          </option>
          <option
            value="pokemon-color/"
          >
            Color
          </option>
        </select>
        <select
          class="filter filter-select-name"
          name="filter-name"
        >
          <option
            disabled=""
            hidden=""
          >
            Filter Name
          </option>
          <option>
            All
          </option>
          <option
            value="ball"
          >
            Ball
          </option>
          <option
            value="fish"
          >
            Fish
          </option>
        </select>
        <div
          class="filter filter-close-box"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="filter main"
    >
      <select
        class="filter filter-select-category"
        name="filter-category"
      >
        <option
          disabled=""
          hidden=""
        >
          Filter By Category
        </option>
        <option>
          All
        </option>
        <option
          value="pokemon-habitat/"
        >
          Habitat
        </option>
        <option
          value="pokemon-shape/"
        >
          Shape
        </option>
        <option
          value="pokemon-color/"
        >
          Color
        </option>
      </select>
      <select
        class="filter filter-select-name"
        name="filter-name"
      >
        <option
          disabled=""
          hidden=""
        >
          Filter Name
        </option>
        <option>
          All
        </option>
        <option
          value="ball"
        >
          Ball
        </option>
        <option
          value="fish"
        >
          Fish
        </option>
      </select>
      <div
        class="filter filter-close-box"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<FilterContainer /> renders correctly without filter category is not chosen 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="filter main"
      >
        <select
          class="filter filter-select-category"
          name="filter-category"
        >
          <option
            disabled=""
            hidden=""
          >
            Filter By Category
          </option>
          <option>
            All
          </option>
          <option
            value="pokemon-habitat/"
          >
            Habitat
          </option>
          <option
            value="pokemon-shape/"
          >
            Shape
          </option>
          <option
            value="pokemon-color/"
          >
            Color
          </option>
        </select>
        <div
          class="filter filter-close-box"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="filter main"
    >
      <select
        class="filter filter-select-category"
        name="filter-category"
      >
        <option
          disabled=""
          hidden=""
        >
          Filter By Category
        </option>
        <option>
          All
        </option>
        <option
          value="pokemon-habitat/"
        >
          Habitat
        </option>
        <option
          value="pokemon-shape/"
        >
          Shape
        </option>
        <option
          value="pokemon-color/"
        >
          Color
        </option>
      </select>
      <div
        class="filter filter-close-box"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
